<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageFragment2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imgFragment2Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="45dp">

        <SeekBar
            android:id="@+id/alphaFrameSeekBar"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:max="255"
            android:progress="0"
            android:progressDrawable="@drawable/alpha_bar_progress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.575" />

        <Button
            android:id="@+id/addFrame"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blueish"
            android:text="@string/add_frame"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/cancelFrame"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blueish"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <Button
            android:id="@+id/saveFrame"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blueish"
            android:text="@string/save"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976" />

        <SeekBar
            android:id="@+id/greenFrameSeekBar"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:max="255"
            android:progress="0"
            android:progressDrawable="@drawable/green_bar_progress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.225" />

        <SeekBar
            android:id="@+id/blueFrameSeekBar"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:max="255"
            android:progress="0"
            android:progressDrawable="@drawable/blue_bar_progress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <SeekBar
            android:id="@+id/paddingSeekBar"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:max="125"
            android:progress="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <SeekBar
            android:id="@+id/redFrameSeekBar"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:max="255"
            android:progress="0"
            android:progressDrawable="@drawable/red_bar_progress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>